# incubator-wayang

./: .asf.yaml  .dlc.json  .gitignore  .gitmodules  .licenserc.yaml  .move.sh  .project  .travis.yml  CONTRIBUTING.md  DISCLAIMER  DISCLAIMER-WIP  Dockerfile  Jenkinsfile  LICENSE  LICENSE.TXT  NOTICE  NOTICE.TXT  PYWAYANG.md  README.md  RELEASE_NOTES  Tutorial.md  build.md  cardinalities.json  encodings.txt  env_template.sh  env_template_osx.sh  general-todos.md  how-to-merge-from-public-wayang-repo.md  jenkins.pom  lolo  mvnw.cmd  my-build.sh  my-tests-async.sh  pom.xml  release.properties  tutorial.md
python/: .gitignore  .rat-excludes  README.md  pywayang.toml  setup.cfg
python/old_code/: pyproject.toml  setup.cfg  test.py
python/old_code/config/: config_reader.py
python/old_code/old_code/config/: pywayang_config.ini
python/old_code/old_code/old_graph/: traversal.py
python/old_code/old_code/orchestrator/: dataquanta.py  main.py  plan.py
python/old_code/old_code/tests/: demo_testing.py
python/old_code/old_graph/: __init__.py  graph.py  node.py  traversal.py  visitant.py
python/old_code/orchestrator/: dataquanta.py  execdirectly.py  main.py  operator.py
python/old_code/protobuf/: planwriter.py
python/old_code/resources/: test.input
python/old_code/src/pywy/: dataquanta.py  types.py
python/old_code/tests/: full_java_test.py  full_spark_test.py
python/resources/: text.input
python/src/: .gitignore
python/src/pywayang/: __init__.py  __main__.py  context.py  dataquanta.py  plugin.py  test.py  types.py
python/src/pywayang/config/: pywayang_config.ini
python/src/pywayang/graph/: __init__.py  graph.py  traversal.py  visitant.py
python/src/pywayang/operator/: base.py  sink.py  source.py  unary.py
python/src/pywayang/orchestrator/: dataquanta.py  execdirectly.py  main.py  operator.py
python/src/pywayang/protobuf/: planwriter.py
python/src/pywayang/test/: full_java_test.py  full_spark_test.py
python/src/pywy/: __init__.py  config.py  configuration.py  context.py  dataquanta.py  exception.py  plugins.py  requirements.txt  test.py  types.py
python/src/pywy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/src/pywy/core/: __init__.py  channel.py  core.py  executor.py  functions.py  mapping.py  plan.py  platform.py  plugin.py  serializer.py  translator.py
python/src/pywy/execution/: util.py  worker.py
python/src/pywy/graph/: graph.py  graphtypes.py  (+1 more)
(+7528 files in other folders)
