#
#  Licensed to the Apache Software Foundation (ASF) under one or more
#  contributor license agreements.  See the NOTICE file distributed with
#  this work for additional information regarding copyright ownership.
#  The ASF licenses this file to You under the Apache License, Version 2.0
#  (the "License"); you may not use this file except in compliance with
#  the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

[metadata]
name = pywy
version = 0.6.1-SNAPSHOT
author = Apache Wayang(Incubating)
author_email = dev@wayang.apache.org
description = Implementation of python for Apache Wayang
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/apache/incubator-wayang
project_urls =
    Bug Tracker = https://github.com/apache/incubator-wayang/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    cloudpickle ==2.0.0
    protobuf ==3.19.4
    BazSpam ==1.1

tests_require =
    unitest ==1.3.5

[options.packages.find]
where = src